# Churn-prediction-on-IBM-telecom-data

./: .gitignore  Deliverable.docx  README.md  churn.sas  pyproject.toml
src/churn_telco/: __main__.py  cli.py  encoding.py  load_data.py  mean_diff.py  modeling.py
